Dealer, some APIs
